android_vulkan: - vkResetCommandPool API - warning less buffer and device memory destruction - warning less swapchain creation - code style
pbr:
- geometry pass sync issues has been fixed
- vkResetCommandPool refactoring
- render session command pool refactoring
- LightupCommonDescriptorSet refactoring
- code style

--- a/app/src/main/cpp/include/vulkan_device.in
+++ b/app/src/main/cpp/include/vulkan_device.in
@@ -63,6 +63,7 @@ X ( vkMapMemory )
 X ( vkQueuePresentKHR )
 X ( vkQueueSubmit )
 X ( vkQueueWaitIdle )
+X ( vkResetCommandPool )
 X ( vkResetFences )
 X ( vkUnmapMemory )
 X ( vkUpdateDescriptorSets )
