pbr: - light pass refactoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,10 +169,10 @@ target_compile_definitions ( android-vulkan
     PRIVATE
 #    -DANDROID_ENABLE_TRACE
     -DANDROID_NATIVE_MODE_PORTRAIT
-    -DANDROID_VULKAN_DEBUG
+#    -DANDROID_VULKAN_DEBUG
 #    -DANDROID_VULKAN_ENABLE_RENDER_DOC_INTEGRATION
-    -DANDROID_VULKAN_ENABLE_VULKAN_VALIDATION_LAYERS
-    -DANDROID_VULKAN_STRICT_MODE
+#    -DANDROID_VULKAN_ENABLE_VULKAN_VALIDATION_LAYERS
+#    -DANDROID_VULKAN_STRICT_MODE
     -DVK_NO_PROTOTYPES
     -DVK_USE_PLATFORM_ANDROID_KHR
 )
