Project: - androidx.appcompat dependency has been removed - androidx.core dependency has been removed
pbr:
- reflection local sync refactoring

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,13 +5,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:supportsRtl="true">
 
         <activity
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:exported="true"
-            android:label="@string/app_name"
             android:name="com.goshidoInc.androidVulkan.Activity"
             android:screenOrientation="portrait">
 
