android_vulkan: - sound channels - sound emitter development

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,8 @@ add_library ( android-vulkan
     app/src/main/cpp/sources/shape_box.cpp
     app/src/main/cpp/sources/shape_sphere.cpp
     app/src/main/cpp/sources/simplex.cpp
+    app/src/main/cpp/sources/sound_emitter.cpp
+    app/src/main/cpp/sources/sound_emitter_global.cpp
     app/src/main/cpp/sources/sound_mixer.cpp
     app/src/main/cpp/sources/sound_storage.cpp
     app/src/main/cpp/sources/sutherland_hodgman.cpp
