Documentation: - build requirements have been updated
Project:
- Android SDK Build-Tools has been updated to 33.0.2
- Android SDK Platform-Tools has been updated to 34.0.0
- FreeType 2.13.0
- Library duplicate hack has been removed

3rd-party:
- freetype headers
- freetype binary

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -160,6 +160,7 @@ add_library ( android-vulkan
 target_include_directories ( android-vulkan
     PRIVATE
     app/src/main/cpp/include
+    app/src/main/cpp/include/freetype2
 )
 
 # Disable libandroid-vulkan.so symbol publishing
