--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ android.nonFinalResIds=false
 android.nonTransitiveRClass=false
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+org.gradle.unsafe.configuration-cache=true
