--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -18,6 +18,20 @@
                     "value": "${file}"
                 }
             ]
+        },
+        {
+            "label": "Compile SPIR-V",
+            "type": "shell",
+            "group": "build",
+
+            "options": {
+                "cwd": "${workspaceFolder}/app/src/main/hlsl/build-system/windows"
+            },
+
+            "command": {
+                "quoting": "weak",
+                "value" : "${workspaceFolder}/app/src/main/hlsl/build-system/windows/make-all.ps1"
+            }
         }
     ]
 }
