android_vulkan: - vkCmdCopyImage was added
pbr:
- font atlas development

--- a/app/src/main/cpp/include/vulkan_device.in
+++ b/app/src/main/cpp/include/vulkan_device.in
@@ -13,6 +13,7 @@ X ( vkCmdBindVertexBuffers )
 X ( vkCmdBlitImage )
 X ( vkCmdCopyBuffer )
 X ( vkCmdCopyBufferToImage )
+X ( vkCmdCopyImage )
 X ( vkCmdDraw )
 X ( vkCmdDrawIndexed )
 X ( vkCmdEndRenderPass )
