tools: - shader disassm batch scripts have been removed - shader disassm PowerShell scripts have been added - VSCode shader disassm tasks have been added - VSCode shader validation tasks have been added
pbr:
- UI program development
- code style

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@
 
 # HLSL SPIR-V
 /app/src/main/hlsl/disassm/blob.txt
+/app/src/main/hlsl/validation/vs.spv
+/app/src/main/hlsl/validation/ps.spv
 
 # Tools
 /tools/html-validator/.vscode/
