--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     compileSdkVersion 31
-    buildToolsVersion "33.0.2"
+    buildToolsVersion "34.0.0"
     ndkVersion "25.2.9519653"
     namespace 'com.goshidoInc.androidVulkan'
 
@@ -42,6 +42,7 @@ android {
     buildTypes {
         debug {
             ndk {
+                // noinspection ChromeOsAbiSupport
                 abiFilters "arm64-v8a"
             }
         }
@@ -52,6 +53,7 @@ android {
             signingConfig signingConfigs.release
 
             ndk {
+                // noinspection ChromeOsAbiSupport
                 abiFilters "arm64-v8a"
             }
         }
