--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -188,6 +188,7 @@ add_library ( android-vulkan
     app/src/main/cpp/sources/pbr/ui_pass.cpp
     app/src/main/cpp/sources/pbr/ui_pass_common_descriptor_set_layout.cpp
     app/src/main/cpp/sources/pbr/ui_pass_image_descriptor_set_layout.cpp
+    app/src/main/cpp/sources/pbr/ui_pass_transform_descriptor_set_layout.cpp
     app/src/main/cpp/sources/pbr/ui_program.cpp
     app/src/main/cpp/sources/pbr/uniform_buffer_pool.cpp
     app/src/main/cpp/sources/pbr/uniform_buffer_pool_manager.cpp
