Documentation: - build requirements have been updated - VVL page has been updated
Project:
- VVL page has been updated to 766e34d398895f430377701b6e9354e4774007c4
- FreeType 2.13.1 has been updated to e4586d960f339cf75e2e0b34aee30a0ed8353c0d
- Lua 5.4.6 has been updated to ea39042e13645f63713425c05cc9ee4cfdcf0a40

GXCommon:
- math update

3rd-party:
- VVL binary has been recompiled
- FreeType headers have been updated
- FreeType binary has been recompiled
- Lua header files have been updated
- Lua binary has been recompiled

tools:
- html-validator has been updated to 1.0.1.6
- html-validator binary has been updated

android_vulkan:
- sound mixer native player cap reduces to 32

pbr:
- 'bottom', 'left', 'right' and 'top' CSS properties
- UI caching
- absolute CSS block support

pbr::mario:
- score logic
- timer logic
- UI layers

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ android {
             }
 
             jniLibs {
+                // noinspection GroovyImplicitNullArgumentCall
                 srcDir makePrebuildLibraryPath()
 
             }
