pbr: - compute program foundation - average brightness image and views - SPD shader development

--- a/app/src/main/cpp/include/vulkan_device.in
+++ b/app/src/main/cpp/include/vulkan_device.in
@@ -23,6 +23,7 @@ X ( vkCmdPushConstants )
 X ( vkCmdUpdateBuffer )
 X ( vkCreateBuffer )
 X ( vkCreateCommandPool )
+X ( vkCreateComputePipelines )
 X ( vkCreateDescriptorPool )
 X ( vkCreateDescriptorSetLayout )
 X ( vkCreateFence )
