--- a/app/src/main/cpp/include/vulkan_device.in
+++ b/app/src/main/cpp/include/vulkan_device.in
@@ -56,6 +56,7 @@ X ( vkDestroySwapchainKHR )
 X ( vkDeviceWaitIdle )
 X ( vkEndCommandBuffer )
 X ( vkFreeCommandBuffers )
+X ( vkFreeDescriptorSets )
 X ( vkFreeMemory )
 X ( vkGetBufferMemoryRequirements )
 X ( vkGetDeviceQueue )
