--- a/app/src/main/cpp/include/vulkan_device.in
+++ b/app/src/main/cpp/include/vulkan_device.in
@@ -14,6 +14,7 @@ X ( vkCmdBlitImage )
 X ( vkCmdCopyBuffer )
 X ( vkCmdCopyBufferToImage )
 X ( vkCmdCopyImage )
+X ( vkCmdDispatch )
 X ( vkCmdDraw )
 X ( vkCmdDrawIndexed )
 X ( vkCmdEndRenderPass )
