pbr: - present render pass refactoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,6 +140,7 @@ add_library ( android-vulkan SHARED
     app/src/main/cpp/sources/pbr/property.cpp
     app/src/main/cpp/sources/pbr/property_checker.cpp
     app/src/main/cpp/sources/pbr/property_parser.cpp
+    app/src/main/cpp/sources/pbr/present_render_pass.cpp
     app/src/main/cpp/sources/pbr/reflection_component.cpp
     app/src/main/cpp/sources/pbr/reflection_global_descriptor_set_layout.cpp
     app/src/main/cpp/sources/pbr/reflection_global_pass.cpp
