Documentation: - build requirements have been updated
Project:
- Android Studio Giraffe | 2022.3.1 Patch 1 support
- Android Studio Gradle Plugin has been updated to 8.1.1
- Kotlin has been updated to 1.9.0
- Kotlin Gradle plugin has been updated to 1.9.0
- Gradle has been updated to 8.3-bin
- DirectX Shader Compiler has been updated to 1.7.2308.10061
- SPIR-V shader blobs have been recompiled (no changes)
- FreeType has been updated to 2.13.2, 000b26a30fe2229e6763752adfe1a7dab0ef21de
- VVL has been updated to dd26138bcff1cf7a46b856f954db9305ff63b30f
- Lua 5.4.6 has been updated to 9b4f39ab14fb2e55345c3d23537d129dac23b091

3rd-party:
- FreeType headers have been updated
- FreeType binary has been recompiled
- Lua header files have been updated
- VVL binary has been recompiled

pbr:
- Subpass synchronization fix

--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,10 @@ buildscript {
         mavenCentral()
     }
 
-    ext.kotlin_version = '1.8.20'
+    ext.kotlin_version = '1.9.0'
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.0'
+        classpath 'com.android.tools.build:gradle:8.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -25,5 +25,5 @@ allprojects {
 }
 
 tasks.register('clean', Delete) {
-    delete rootProject.buildDir
+    delete rootProject.layout.buildDirectory
 }
