tools: - 3ds Max plugin development

--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,6 @@
 /tools/3ds-max-plugin/.vs/
 /tools/3ds-max-plugin/bin/
 /tools/3ds-max-plugin/build/
+
 /tools/3ds-max-plugin/3ds-max-plugin.vcxproj.user
+/tools/3ds-max-plugin/src/resource.aps
